[project]
name = "crawl-practice-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "drissionpage>=4.1.0.17",
    "fonttools>=4.56.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyecharts>=2.0.8",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
